Changes in the code